--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "e9151254-cbb8-4579-bac6-09fe9265e08f",
-  "name": "ALProject1_MHA",
+  "name": "MHA Seminar",
   "publisher": "Martins AddOn 2",
   "brief": "Mit semninar",
   "description": "",
